--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,17 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
+    "paths": {
+      "@core/*":[
+        "src/app/core/*"
+      ],
+      "@modules/*":[
+        "src/app/modules/*"
+      ], 
+      "@shared/*":[
+        "src/app/shared/*"
+      ],  
+    },
     "lib": [
       "ES2022",
       "dom"
