--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/tailwindcss": "^0.2.0",
     "@tremor/react": "^3.13.4",
     "axios": "^1.6.7",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0"
