--- a/client/package.json
+++ b/client/package.json
@@ -11,18 +11,23 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.23.1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "7.2.0",
-    "eslint-plugin-react-refresh": "0.4.6",
-    "@typescript-eslint/parser": "7.2.0",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "@vitejs/plugin-react-swc": "3.5.0",
-    "@types/react-dom": "18.2.22",
     "@types/react": "18.2.66",
-    "typescript": "5.2.2",
+    "@types/react-dom": "18.2.22",
+    "@typescript-eslint/eslint-plugin": "7.2.0",
+    "@typescript-eslint/parser": "7.2.0",
+    "@vitejs/plugin-react-swc": "3.5.0",
+    "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.4.6",
+    "postcss": "8.4.38",
+    "standard": "17.1.0",
+    "tailwindcss": "3.4.3",
+    "typescript": "5.2.2",
     "vite": "5.2.0"
   }
 }
