--- a/api/package.json
+++ b/api/package.json
@@ -3,10 +3,32 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "description": "API REST con Node.js y Express",
+  "author": {
+    "name": "Ivan Ortega Garzon",
+    "email": "IvanOrtega_97@hotmail.com"
+  },
+
+  "scripts": {
+    "dev": "nodemon",
+    "build": "tsc",
+    "start": "node dist/index.js"
+  },
+
   "dependencies": {
-    "@types/express": "4.17.21",
-    "@types/node": "20.12.13",
+    "cors": "2.8.5",
+    "dotenv": "16.4.5",
     "express": "4.19.2",
+    "mysql2": "3.9.9",
+    "sequelize": "6.37.3"
+  },
+  "devDependencies": {
+    "@types/express": "4.17.21",
+    "@types/morgan": "1.9.9",
+    "@types/node": "20.12.13",
+    "@types/cors": "2.8.17",
+    "morgan": "1.10.0",
+    "nodemon": "3.1.2",
     "ts-node": "10.9.2",
     "typescript": "5.4.5"
   }
